<resources>
    <string name="AccessError">Access error</string>
    <string name="ActionAddUser">un1 added un2</string>
    <string name="ActionChangedPhoto">un1 changed group photo</string>
    <string name="ActionChangedTitle">un1 changed group name to un2</string>
    <string name="ActionCreateGroup">un1 created the group</string>
    <string name="ActionKickUser">un1 kicked un2</string>
    <string name="ActionLeftUser">un1 left group</string>
    <string name="ActionRemovedPhoto">un1 removed group photo</string>
    <string name="Add">Add</string>
    <string name="AddContact">Add Contact</string>
    <string name="AddContactQ">Add contact?</string>
    <string name="AddMember">Add member</string>
    <string name="AddToContacts">ADD TO CONTACTS</string>
    <string name="AddToTheGroup">Add %1$s to the group?</string>
    <string name="Alert">Alert</string>
    <string name="AllContacts">ALL CONTACTS</string>
    <string name="AndMoreTyping">and %d more people</string>
    <string name="AppName">Telegram</string>
    <string name="AreTyping">are typing...</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="AskAQuestion">Ask a Question</string>
    <string name="Attach">Attach</string>
    <string name="AttachAudio">Audio</string>
    <string name="AttachContact">Contact</string>
    <string name="AttachDocument">Document</string>
    <string name="AttachLocation">Location</string>
    <string name="AttachPhoto">Photo</string>
    <string name="AttachVideo">Video</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="Back">Back</string>
    <string name="BlockContact">Block Contact</string>
    <string name="BlockedUsers">Blocked Users</string>
    <string name="CacheTag">CACHE_TAG</string>
    <string name="Call">Call</string>
    <string name="CallText">We will call you in</string>
    <string name="Calling">Calling you...</string>
    <string name="Cancel">Cancel</string>
    <string name="CancelDownload">Cancel Download</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="ChatBackground">Chat Background</string>
    <string name="ChatDocument">Document</string>
    <string name="ChatGallery">Gallery</string>
    <string name="ChatLocation">Location</string>
    <string name="ChatTakePhoto">Take a photo</string>
    <string name="ChatVideo">Video</string>
    <string name="Chats">Chats</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="ClearHistory">Clear History</string>
    <string name="Code">Code</string>
    <string name="CodeExpired">Code expired, please login again</string>
    <string name="Connecting">Connecting...</string>
    <string name="ContactInfo">Contact Info</string>
    <string name="Contacts">Contacts</string>
    <string name="Copy">Copy</string>
    <string name="CreateEncryptedChatError">An error occurred.</string>
    <string name="CreateEncryptedChatOutdatedError">Cannot create a secret chat with %1$s.\n\n%2$s is using an older version of Telegram and needs to update first.</string>
    <string name="DOWNLOAD">Download</string>
    <string name="Default">Default</string>
    <string name="Delete">Delete</string>
    <string name="DeleteAndExit">Delete and leave group</string>
    <string name="DeleteChat">Delete and Exit</string>
    <string name="DeleteChatQuestion">Delete this chat?</string>
    <string name="DeletePhoto">Delete photo</string>
    <string name="DeleteThisGroup">Delete this Group</string>
    <string name="Done">Done</string>
    <string name="Edit">Edit</string>
    <string name="EnableAnimations">Enable Animations</string>
    <string name="EncryptedChatAccepted">Secret chat started</string>
    <string name="EncryptedChatRequested">Secret chat requested</string>
    <string name="EncryptedChatStartedIncoming">You joined the secret chat.</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your secret chat.</string>
    <string name="EncryptedDescription1">Use end-to-end encryption</string>
    <string name="EncryptedDescription2">Leave no trace on our servers</string>
    <string name="EncryptedDescription3">Have a self-destruct timer</string>
    <string name="EncryptedDescription4">Do not allow forwarding</string>
    <string name="EncryptedDescriptionTitle">Secret chats:</string>
    <string name="EncryptedPlaceholderTitleIncoming">%s invited you to join a secret chat.</string>
    <string name="EncryptedPlaceholderTitleOutgoing">You have invited %s to join a secret chat.</string>
    <string name="EncryptionKey">Encryption Key</string>
    <string name="EncryptionKeyDescription">This image is a visualization of the encryption key for this secret chat with &lt;b&gt;%1$s&lt;/b&gt;.&lt;br&gt;&lt;br&gt;If this image looks the same on &lt;b&gt;%2$s\'s&lt;/b&gt; phone, your chat is 200%% secure.&lt;br&gt;&lt;br&gt;Learn more at telegram.org</string>
    <string name="EncryptionProcessing">Exchanging encryption keys...</string>
    <string name="EncryptionRejected">Secret chat cancelled</string>
    <string name="EnterGroupNamePlaceholder">Enter group name</string>
    <string name="EnterGroupNameTitle">ENTER GROUP NAME</string>
    <string name="ExternalStorage">External Storage</string>
    <string name="FewNewMessages">%1$d new messages</string>
    <string name="FileUploadLimit">File size shouldn\'t be greater than %1$s</string>
    <string name="FirstName">First name (required)</string>
    <string name="FloodWait">Too many attempts, please try again later</string>
    <string name="Forward">Forward</string>
    <string name="ForwardMessagesTo">Forward messages to %1$s?</string>
    <string name="ForwardedMessage">Forwarded message</string>
    <string name="FreeOfTotal">Free %1$s of %2$s</string>
    <string name="From">From</string>
    <string name="FromCamera">From camera</string>
    <string name="FromGalley">From gallery</string>
    <string name="FromYou">You</string>
    <string name="Gallery">Gallery</string>
    <string name="GotAQuestion">Got a question\nabout Telegram?</string>
    <string name="GroupInfo">Group Info</string>
    <string name="GroupName">Group name</string>
    <string name="GroupNotifications">GROUP NOTIFICATIONS</string>
    <string name="HiddenName">Hidden Name</string>
    <string name="Hybrid">Hybrid</string>
    <string name="InAppNotifications">IN-APP NOTIFICATIONS</string>
    <string name="InAppPreview">In-App Preview</string>
    <string name="InAppSounds">In-App Sounds</string>
    <string name="InAppVibrate">In-App Vibrate</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="InvalidCode">Invalid code</string>
    <string name="InvalidFirstName">Invalid first name</string>
    <string name="InvalidLastName">Invalid last name</string>
    <string name="InvalidPhoneNumber">Invalid phone number</string>
    <string name="Invisible">invisible</string>
    <string name="InviteFriends">Invite Friends</string>
    <string name="InviteText">Hey, let\'s switch to Telegram: http://telegram.org/dl2</string>
    <string name="InviteUser">This user does not have Telegram yet, send an invitation?</string>
    <string name="IsTyping">is typing...</string>
    <string name="KMetersAway">km away</string>
    <string name="KickFromGroup">Kick from group</string>
    <string name="LastName">Last name (optional)</string>
    <string name="LastSeen">last seen</string>
    <string name="Loading">Loading...</string>
    <string name="LogOut">Log Out</string>
    <string name="MEMBER">MEMBER</string>
    <string name="MEMBERS">MEMBERS</string>
    <string name="Map">Map</string>
    <string name="Members">members</string>
    <string name="Message">Message</string>
    <string name="MessageLifetime">Self-Destruct Timer</string>
    <string name="MessageLifetime1d">1 day</string>
    <string name="MessageLifetime1h">1 hour</string>
    <string name="MessageLifetime1m">1 minute</string>
    <string name="MessageLifetime1w">1 week</string>
    <string name="MessageLifetime2s">2 seconds</string>
    <string name="MessageLifetime5s">5 seconds</string>
    <string name="MessageLifetimeChanged">%1$s set the self-destruct timer to %2$s</string>
    <string name="MessageLifetimeChangedOutgoing">You set the self-destruct timer to %1$s</string>
    <string name="MessageLifetimeRemoved">%1$s disabled the self-destruct timer</string>
    <string name="MessageNotifications">MESSAGE NOTIFICATIONS</string>
    <string name="MessagePreview">Message Preview</string>
    <string name="MessagesSettings">MESSAGES</string>
    <string name="MetersAway">m away</string>
    <string name="MyLocation">My location</string>
    <string name="NewGroup">New Group</string>
    <string name="NewMessages">New messages</string>
    <string name="NewSecretChat">New Secret Chat</string>
    <string name="Next">Next</string>
    <string name="NoBlocked">No blocked users yet</string>
    <string name="NoChats">No chats yet...</string>
    <string name="NoChatsHelp">Start messaging by pressing the\ncompose button in the top right corner\nor go to the Contacts section.</string>
    <string name="NoContacts">No contacts yet</string>
    <string name="NoFiles">No files yet...</string>
    <string name="NoHandleAppInstalled">You don\'t have any application that can handle with mime type \'%1$s\', please install one to continue</string>
    <string name="NoMedia">No shared media yet</string>
    <string name="NoMessages">No messages here yet...</string>
    <string name="NoPlayerInstalled">You don\'t have a video player, please install one to continue</string>
    <string name="NoRecent">No recent</string>
    <string name="NoResult">No results</string>
    <string name="NoSound">No sound</string>
    <string name="NotMounted">Storage not mounted</string>
    <string name="NotificationContactJoined">%1$s joined Telegram!</string>
    <string name="NotificationContactNewPhoto">%1$s updated profile photo</string>
    <string name="NotificationEditedGroupName">%1$s edited the group\'s %2$s name</string>
    <string name="NotificationEditedGroupPhoto">%1$s edited the group\'s %2$s photo</string>
    <string name="NotificationGroupAddMember">%1$s invited %3$s to the group %2$s</string>
    <string name="NotificationGroupKickMember">%1$s kicked %3$s from the group %2$s</string>
    <string name="NotificationGroupKickYou">%1$s kicked you from the group %2$s</string>
    <string name="NotificationGroupLeftMember">%1$s has left the group %2$s</string>
    <string name="NotificationInvitedToGroup">%1$s invited you to the group %2$s</string>
    <string name="NotificationMessageAudio">%1$s sent you an audio</string>
    <string name="NotificationMessageContact">%1$s shared a contact with you</string>
    <string name="NotificationMessageDocument">%1$s sent you a document</string>
    <string name="NotificationMessageGroupAudio">%1$s sent an audio to the group %2$s</string>
    <string name="NotificationMessageGroupContact">%1$s shared a contact in the group %2$s</string>
    <string name="NotificationMessageGroupDocument">%1$s sent a document to the group %2$s</string>
    <string name="NotificationMessageGroupMap">%1$s sent a map to the group %2$s</string>
    <string name="NotificationMessageGroupNoText">%1$s sent a message to the group %2$s</string>
    <string name="NotificationMessageGroupPhoto">%1$s sent a photo to the group %2$s</string>
    <string name="NotificationMessageGroupText">%1$s @ %2$s: %3$s</string>
    <string name="RegisterText">Set up your first and last name</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="StartText">Please confirm your country code\nand enter your phone number.</string>
    <string name="TypeMessage">Type message</string>
    <string name="WrongNumber">Wrong number?</string>
</resources>