<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/secret_placeholder" android:padding="20dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
    <TextView android:textSize="15dp" android:textColor="#ffffff" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/invite_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="210dp" />
    <TextView android:textSize="15dp" android:textColor="#ffffff" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:maxWidth="260dp" android:text="@string/EncryptedDescriptionTitle" />
    <TextView android:textSize="15dp" android:textColor="#ffffff" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/secret_description1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:maxWidth="260dp" android:text="@string/EncryptedDescription1" android:drawableLeft="@drawable/ic_lock_white" android:drawablePadding="8dp" />
    <TextView android:textSize="15dp" android:textColor="#ffffff" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/secret_description2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:maxWidth="260dp" android:text="@string/EncryptedDescription2" android:drawableLeft="@drawable/ic_lock_white" android:drawablePadding="8dp" />
    <TextView android:textSize="15dp" android:textColor="#ffffff" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/secret_description3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:maxWidth="260dp" android:text="@string/EncryptedDescription3" android:drawableLeft="@drawable/ic_lock_white" android:drawablePadding="8dp" />
    <TextView android:textSize="15dp" android:textColor="#ffffff" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/secret_description4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:maxWidth="260dp" android:text="@string/EncryptedDescription4" android:drawableLeft="@drawable/ic_lock_white" android:drawablePadding="8dp" />
</LinearLayout>
