<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="#fafafa" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <org.telegram.ui.Views.FrameLayoutFixed android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content">
        <org.telegram.ui.LoginActivityPhoneView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/login_page1" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="30dp" android:layout_marginRight="16dp">
            <TextView android:textSize="20dp" android:textColor="#000000" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/login_coutry_textview" android:background="@drawable/spinner_states" android:paddingLeft="12dp" android:paddingTop="10dp" android:paddingRight="12dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:maxLines="1" android:textIsSelectable="false" />
            <View android:background="#808080" android:paddingLeft="12dp" android:paddingRight="12dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginLeft="24dp" android:layout_marginTop="-6.5dp" android:layout_marginRight="24dp" />
            <LinearLayout android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
                <TextView android:textSize="20dp" android:textColor="#a6a6a6" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:text="+" />
                <EditText android:textSize="18dp" android:textColor="#000000" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/login_county_code_field" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:width="70dp" android:maxLength="4" android:editable="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious|flagNoExtractUi" android:textCursorDrawable="0x0" />
                <EditText android:textSize="18dp" android:textColor="#000000" android:textColorHint="#979797" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/login_phone_field" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="20dp" android:maxLines="1" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious|flagNoExtractUi" android:textCursorDrawable="0x0" />
            </LinearLayout>
            <TextView android:textSize="16dp" android:textColor="#808080" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/login_confirm_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28dp" android:layout_marginBottom="10dp" android:text="@string/StartText" android:lineSpacingExtra="2dp" />
        </org.telegram.ui.LoginActivityPhoneView>
        <org.telegram.ui.LoginActivitySmsView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/login_page2" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="16dp" android:layout_marginTop="30dp" android:layout_marginRight="16dp">
            <TextView android:textSize="16dp" android:textColor="#808080" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/login_sms_confirm_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lineSpacingExtra="2dp" />
            <EditText android:textSize="18dp" android:textColor="#000000" android:textColorHint="#979797" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/login_sms_code_field" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:hint="@string/Code" android:maxLines="1" android:width="220dp" android:editable="true" android:inputType="textCapWords|number|numberSigned|numberDecimal|numberPassword|phone" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious|flagNoExtractUi" android:textCursorDrawable="0x0" />
            <TextView android:textSize="16dp" android:textColor="#808080" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/login_time_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:lineSpacingExtra="2dp" />
            <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/spinner">
                <TextView android:textSize="16dp" android:textColor="#316f9f" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/wrong_number" android:paddingTop="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:text="@string/WrongNumber" android:lineSpacingExtra="2dp" />
            </LinearLayout>
        </org.telegram.ui.LoginActivitySmsView>
        <org.telegram.ui.LoginActivityRegisterView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/login_page3" android:paddingLeft="16dp" android:paddingRight="16dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="30dp">
            <TextView android:textSize="16dp" android:textColor="#808080" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/login_register_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/RegisterText" />
            <EditText android:textSize="18dp" android:textColor="#000000" android:textColorHint="#979797" android:id="@+id/login_first_name_field" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="34dp" android:layout_marginRight="40dp" android:hint="@string/FirstName" android:maxLines="1" android:lines="1" android:capitalize="words" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious|flagNoExtractUi" android:textCursorDrawable="0x0" />
            <EditText android:textSize="18dp" android:textColor="#000000" android:textColorHint="#979797" android:id="@+id/login_last_name_field" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginTop="10dp" android:layout_marginRight="40dp" android:hint="@string/LastName" android:maxLines="1" android:lines="1" android:capitalize="words" android:autoText="false" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious|flagNoExtractUi" android:textCursorDrawable="0x0" />
            <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="match_parent" android:minHeight="140dp" android:layout_below="@+id/spinner">
                <TextView android:textSize="16dp" android:textColor="#316f9f" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/changed_mind" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x1e01" android:layout_marginTop="-40dp" android:layout_marginBottom="20dp" android:text="@string/CancelRegistration" android:lineSpacingExtra="2dp" />
            </LinearLayout>
        </org.telegram.ui.LoginActivityRegisterView>
    </org.telegram.ui.Views.FrameLayoutFixed>
</ScrollView>
