<?xml version="1.0" encoding="utf-8"?>
<org.telegram.ui.Views.SizeNotifierRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/chat_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/background_image" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerCrop" />
    <org.telegram.ui.Views.FrameLayoutFixed android:paddingBottom="48dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="14dp" android:textColor="#ffffff" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/searchEmptyView" android:paddingLeft="7dp" android:paddingTop="2dp" android:paddingRight="7dp" android:paddingBottom="2dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/NoMessages" />
        <include android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" layout="@layout/encrypted_chat_placeholder" />
    </org.telegram.ui.Views.FrameLayoutFixed>
    <org.telegram.ui.Views.LayoutListView android:id="@+id/chat_list_view" android:paddingTop="4dp" android:paddingBottom="3dp" android:fadingEdge="UNKNOWN_DATA_0x0" android:fadingEdgeLength="0dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="-3dp" android:listSelector="0x106000d" android:stackFromBottom="true" android:cacheColorHint="#00000000" android:divider="0x0" android:dividerHeight="0dp" android:layout_above="@+id/chat_compose_panel" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <FrameLayout android:id="@+id/progressLayout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true"
        <FrameLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/progressLayoutInner" android:layout_width="UNKNOWN_DATA_0x2401" android:layout_height="UNKNOWN_DATA_0x2401" android:layout_marginBottom="48dp">
            <ProgressBar android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/center_progress" android:layout_width="UNKNOWN_DATA_0x2001" android:layout_height="UNKNOWN_DATA_0x2001" android:indeterminate="true" android:indeterminateDrawable="@drawable/loading_animation" android:indeterminateDuration="1500" android:indeterminateBehavior="repeat" />
        </FrameLayout>
    </FrameLayout>
    <FrameLayout android:id="@+id/top_panel" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001">
        <TextView android:textSize="12dp" android:textStyle="bold" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/top_panel_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAllCaps="true" />
        <ImageView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/top_plane_close" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x1e01" android:layout_height="UNKNOWN_DATA_0x1e01" android:layout_marginRight="4dp" android:scaleType="centerInside" />
    </FrameLayout>
    <RelativeLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/chat_compose_panel" android:background="@drawable/compose_panel" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageView android:id="@+id/chat_smile_button" android:paddingLeft="4dp" android:paddingTop="1dp" android:layout_width="UNKNOWN_DATA_0x3001" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_marginTop="2dp" android:src="@drawable/ic_msg_panel_smiles" android:scaleType="centerInside" android:layout_alignBottom="@+id/chat_text_edit" />
        <ImageButton android:enabled="false" android:id="@+id/chat_send_button" android:background="0x106000d" android:layout_width="UNKNOWN_DATA_0x3401" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_marginTop="2dp" android:scaleType="centerInside" android:layout_alignBottom="@+id/chat_text_edit" android:layout_alignParentRight="true" />
        <EditText android:textSize="18dp" android:textColor="#000000" android:textColorHint="#909090" android:id="@+id/chat_text_edit" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:minHeight="48dp" android:hint="@string/TypeMessage" android:maxLines="4" android:ems="10" android:maxLength="16384" android:layout_toLeftOf="@+id/chat_send_button" android:layout_toRightOf="@+id/chat_smile_button" android:layout_alignParentTop="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:imeOptions="flagNoExtractUi" android:textCursorDrawable="0x0" />
    </RelativeLayout>
    <FrameLayout android:id="@+id/bottom_overlay" android:background="#ffffff" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:clickable="true" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_alignParentBottom="true">
        <TextView android:textSize="16dp" android:textColor="#7f7f7f" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/bottom_overlay_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </FrameLayout>
    <FrameLayout android:id="@+id/bottom_overlay_chat" android:background="#fbfcfd" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:clickable="true" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_alignParentBottom="true">
        <TextView android:textSize="18dp" android:textColor="#3e6fa1" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/bottom_overlay_chat_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/DeleteThisGroup" />
    </FrameLayout>
    <ImageView android:id="@+id/pagedown_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4dp" android:layout_marginBottom="4dp" android:src="@drawable/pagedown" android:layout_above="@+id/chat_compose_panel" android:layout_alignParentRight="true" />
</org.telegram.ui.Views.SizeNotifierRelativeLayout>
